--- a/recap.ipynb
+++ b/recap.ipynb
@@ -81,7 +81,7 @@
         },
         "outputId": "3027b9e4-b68c-4289-97bd-0a308482403f"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
         },
         "outputId": "2210709f-5009-4a2f-ca7b-d7035cca5c8b"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +151,7 @@
         },
         "outputId": "9ffc740c-2625-4604-f75d-bea6c41fffef"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,7 +187,7 @@
         },
         "outputId": "cf6da4a7-fe15-4277-9f34-44d99defd0ea"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,7 +252,7 @@
         },
         "outputId": "65f88103-53ee-4e1d-a24a-67e259874302"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,7 +303,7 @@
         },
         "outputId": "6cebe6e0-af3b-405f-90fd-69de74e6984e"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,7 +343,7 @@
         },
         "outputId": "92525a04-aa5e-4890-bd0c-4784021ad66d"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,7 +380,7 @@
         },
         "outputId": "1b9884ff-a977-482e-d2bf-76b31b865440"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -417,7 +417,7 @@
         },
         "outputId": "1b8e896c-1cbe-4e40-a493-af9fb46f5770"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,7 +460,7 @@
         },
         "outputId": "7cfb6738-04c0-4619-f7a7-f6e1fc8ea6b0"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,7 +508,7 @@
         },
         "outputId": "66344a12-9548-4dc5-8d2f-b616dfb1f241"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,7 +556,7 @@
         },
         "outputId": "11ff9a0a-dcc4-4d70-fffd-31f00fc02fd3"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,7 +604,7 @@
         },
         "outputId": "8f0d0769-e404-4d07-83a1-06969f6bd862"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -644,7 +644,7 @@
         },
         "outputId": "934050d0-e301-4821-d61e-e5ccdb22861e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,7 +688,7 @@
         },
         "outputId": "70cc107e-e1cb-45ba-eb68-e8fb782eec2a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -742,7 +742,7 @@
         },
         "outputId": "daaa809b-9a8f-4073-8a86-bb373c9346c9"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,7 +794,7 @@
         },
         "outputId": "6c624b11-1d72-4b2d-9434-8ab3b7eb8564"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,7 +845,7 @@
         },
         "outputId": "4d43a199-82b7-4001-8707-a53e90861d00"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -883,7 +883,7 @@
         },
         "outputId": "b7e2b8be-07fc-4780-c729-dde4c43abca3"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -920,7 +920,7 @@
         },
         "outputId": "5b9ad1b6-2490-4c93-cda1-03a53daa9c71"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -956,7 +956,7 @@
         },
         "outputId": "3b5d2750-408e-47f1-b907-1f3969df3597"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -992,7 +992,7 @@
         },
         "outputId": "57b1947a-d41d-4657-f6ed-542a7e811c5b"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1027,7 +1027,7 @@
         },
         "outputId": "25c41725-3300-4726-f16a-69b5703d1f10"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1060,7 +1060,7 @@
         },
         "outputId": "0c270e5f-6017-49a6-e4b5-860d42e8814c"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1113,7 +1113,7 @@
         },
         "outputId": "00651c5f-34ac-4982-c03d-4b55b8acdb0e"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1148,7 +1148,7 @@
         },
         "outputId": "167c985e-69e2-46b7-ef02-7bf21cdbf6f4"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1251,7 +1251,7 @@
         },
         "outputId": "8f8a46ae-4624-4207-ddbe-7a9344f5df4e"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1298,7 +1298,7 @@
         },
         "outputId": "c4b08c1c-e1da-4f19-c761-4bfe62ca051f"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1383,7 +1383,7 @@
         },
         "outputId": "b0573dad-bd02-470a-c1ff-0691c0759109"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1416,7 +1416,7 @@
         "id": "tBWtFyAEIlnc",
         "outputId": "3b8db60f-a048-49d7-ec3c-c7a0ef33af7e"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1445,7 +1445,7 @@
         "id": "lia82xewJreD",
         "outputId": "2cf95bbb-bcf5-48fc-993e-d4a3e25fa8a2"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1517,7 +1517,7 @@
         },
         "outputId": "df0c1646-918b-4ce3-f43e-0bb53e294a2d"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1573,7 +1573,7 @@
         },
         "outputId": "6f0827a2-d403-40fc-e7e2-7fcce8bfb14d"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1609,7 +1609,7 @@
         },
         "outputId": "d7fa4f2d-5e35-46d7-f495-3e6edd353581"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1649,7 +1649,7 @@
         },
         "outputId": "7953d17d-950c-4ff1-a489-25a76aa325b4"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1685,7 +1685,7 @@
         },
         "outputId": "18b9733a-10e5-4aa0-ab4f-9df947f61eae"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1715,7 +1715,7 @@
         },
         "outputId": "0b2f7daf-e72f-4b0b-9d28-49f6c05d6280"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1763,7 +1763,7 @@
         },
         "outputId": "18f0af07-7562-4ad3-bf9e-4bc2713ccc16"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1815,7 +1815,7 @@
         },
         "outputId": "3bb6a0b0-2a88-47ff-e4de-c543da4e7b81"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1856,7 +1856,7 @@
         },
         "outputId": "3a7285b7-8478-4292-db4b-4474a14b73f3"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1905,7 +1905,7 @@
         },
         "outputId": "fcfec1c7-8d45-4276-e95f-6d83f12a10d4"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1940,7 +1940,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2011,7 +2011,7 @@
         },
         "outputId": "34e01ff7-e24e-4a0e-8961-69d145da4b3e"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2052,7 +2052,7 @@
         },
         "outputId": "3bd7c359-3be7-4656-f17f-cab037046f88"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2090,7 +2090,7 @@
         },
         "outputId": "0493abac-c034-4130-e476-574752f9097d"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2148,7 +2148,7 @@
         },
         "outputId": "64bda71e-ef65-4b38-ea34-cd009c4829c3"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2201,7 +2201,7 @@
         },
         "outputId": "a2b3917b-9ef6-4e68-f307-d77f7184bc92"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2255,7 +2255,7 @@
         },
         "outputId": "5439d7c2-bdb3-4a9e-debe-bf8614eaa8d5"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2311,7 +2311,7 @@
         },
         "outputId": "4db507f0-398c-4608-a652-9a700d7c0c46"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2364,8 +2364,7 @@
         "\n",
         "wöchentlich = (essen_pro_woche * mittagessen) + geld\n",
         "täglich = wöchentlich / 7\n",
-        "print(f\"Durchschnittliche Lebensmittelausgaben: Täglich: {str(round(täglich,1)).replace('.', ',')} Euro Wöchentlich: {str(round(wöchentlich,1)).replace('.', ',')} Euro\")\n",
-        ""
+        "print(f\"Durchschnittliche Lebensmittelausgaben: Täglich: {str(round(täglich,1)).replace('.', ',')} Euro Wöchentlich: {str(round(wöchentlich,1)).replace('.', ',')} Euro\")\n"
       ],
       "metadata": {
         "id": "dSHqTLjyHjh6",
@@ -2374,7 +2373,7 @@
         },
         "outputId": "ff4a4f31-2d94-4b82-9a59-b0fd892cc336"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2441,7 +2440,7 @@
         },
         "outputId": "f6d12701-40a5-47bd-d6f4-49716378e5ab"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2494,7 +2493,7 @@
         },
         "outputId": "08e47a5e-27d3-409d-dff4-5ede4317c6dc"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2554,7 +2553,7 @@
         },
         "outputId": "cc3f698e-6746-41d2-8b99-12e70f6db681"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2620,15 +2619,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8307f07a-b495-464b-d9cc-33ee09397089"
+        "outputId": "90a64b17-129c-4186-ff92-30f01c702674"
       },
-      "execution_count": 80,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Bitte geben Sie ein Passwort ein: 54568\n",
+            "Bitte geben Sie ein Passwort ein: kittycat\n",
+            "Du kennst das Passwort!\n",
+            "Sie müssen entweder der autorisierte Benutzer sein...\n",
+            "...oder ein ziemlich geschickter Hacker.\n",
             "Das Programm hat seine Ausführung beendet. Danke und tschüss!\n"
           ]
         }
@@ -2664,38 +2666,31 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dein Code hier"
+        "# Dein Code hier\n",
+        "zahl = int(input(\"Tippe bitte eine Zahl ein: \"))\n",
+        "if zahl == 1984:\n",
+        "  print(\"Orwell\")\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "nyepb6aC2JMN"
+        "id": "nyepb6aC2JMN",
+        "outputId": "bb44edcd-15d1-41a9-8bd4-4a4cc2229841",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Übung\n",
-        "\n",
-        "Schreiben ein Programm, das den Benutzer nach einer ganzen Zahl fragt. Wenn die Zahl kleiner als Null ist, sollte das Programm die Zahl multipliziert mit -1 ausdrucken. Andernfalls druckt das Programm die Nummer so aus, wie sie ist. Beispiele für erwartete Ausgaben:\n",
-        "\n",
-        "```\n",
-        "Tippe bitte eine Zahl ein: -7\n",
-        "Der absolute Wert deiner Zahl ist 7\n",
-        "```\n",
-        "\n",
-        "```\n",
-        "Tippe bitte eine Zahl ein: 1\n",
-        "Der absolute Wert deiner Zahl ist 1\n",
-        "```\n",
-        "```\n",
-        "Tippe bitte eine Zahl ein: -99\n",
-        "Der absolute Wert deiner Zahl ist 99\n",
-        "```\n"
-      ],
-      "metadata": {
-        "id": "09GiTU6P2giF"
-      }
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tippe bitte eine Zahl ein: 1984\n",
+            "Orwell\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2738,13 +2733,46 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dein Code hier"
+        "# Dein Code hier\n",
+        "name = input(\"Bitte sagen Sie mir Ihren Namen: \")\n",
+        "\n",
+        "if name != \"Jerry\":\n",
+        "  portionen = int(input(\"Wie viele Portionen Suppe? \"))\n",
+        "  preis_pro_portion = 5.90\n",
+        "  gesamtpreis = portionen * preis_pro_portion\n",
+        "\n",
+        "  print(f\"Der Gesamtpreis beträgt {str(gesamtpreis).replace ('.', ',')}\")\n",
+        "  print(\"Der Nächste bitte!\")\n",
+        "\n",
+        "\n",
+        "else:\n",
+        "  print(f\"Der Preis pro Portion beträgt {str(preis_pro_portion).replace ('.', ',')}\")\n",
+        "  print(\"Der Nächste bitte!\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "JGPzZtmL3pwl"
+        "id": "JGPzZtmL3pwl",
+        "outputId": "55c86187-e1b5-48bd-fb4c-cb542e3c7087",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bitte sagen Sie mir Ihren Namen: Kramer\n",
+            "Wie viele Portionen Suppe? 2\n",
+            "Der Gesamtpreis beträgt 11,8\n",
+            "Der Nächste bitte!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2784,13 +2812,65 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dein Code hier"
+        "# Dein Code hier\n",
+        "zahl = int(input(\"Bitte geben Sie eine Zahl ein: \"))\n",
+        "\n",
+        "if zahl < 1000:\n",
+        "  print(\"Diese zahl ist kleiner als 1000 \")\n",
+        "  print(\"Dankeschön!\")\n"
       ],
       "metadata": {
-        "id": "nOXh4vbU4Twy"
+        "id": "nOXh4vbU4Twy",
+        "outputId": "8215628f-f4f7-4643-cf3a-0d7ca111bc1e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bitte geben Sie eine Zahl ein: 50\n",
+            "Diese zahl ist kleiner als 1000 \n",
+            "Dankeschön!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zahl = int(input(\"Bitte geben Sie eine Zahl ein: \"))\n",
+        "\n",
+        "if zahl < 1000 + 100:\n",
+        "  print(\"Diese Zahl ist kleiner als 1000\\nDiese Zahl ist kleiner als 100\")\n",
+        "  print(\"Dankeschön!\")\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "nd-GWUoQjCkO",
+        "outputId": "1371e0f9-0a70-46d6-c431-c5580efa7ef8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bitte geben Sie eine Zahl ein: 59\n",
+            "Diese Zahl ist kleiner als 1000\n",
+            "Diese Zahl ist kleiner als 100\n",
+            "Dankeschön!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2820,10 +2900,23 @@
         "    print(\"a ist kleiner als 5\")"
       ],
       "metadata": {
-        "id": "P7EaYy6A4eMv"
+        "id": "P7EaYy6A4eMv",
+        "outputId": "c340e19e-bc6d-4e52-ed48-82b1f6f70bf3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "a ist kleiner als 5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
