--- a/recap.ipynb
+++ b/recap.ipynb
@@ -2675,10 +2675,10 @@
       ],
       "metadata": {
         "id": "nyepb6aC2JMN",
-        "outputId": "bb44edcd-15d1-41a9-8bd4-4a4cc2229841",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bb44edcd-15d1-41a9-8bd4-4a4cc2229841"
       },
       "execution_count": 9,
       "outputs": [
@@ -2755,20 +2755,19 @@
       ],
       "metadata": {
         "id": "JGPzZtmL3pwl",
-        "outputId": "55c86187-e1b5-48bd-fb4c-cb542e3c7087",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "442db12d-2630-46ac-eb57-171714756929"
       },
-      "execution_count": 16,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Bitte sagen Sie mir Ihren Namen: Kramer\n",
-            "Wie viele Portionen Suppe? 2\n",
-            "Der Gesamtpreis beträgt 11,8\n",
+            "Bitte sagen Sie mir Ihren Namen: Jerry\n",
+            "Der Preis pro Portion beträgt 5,9\n",
             "Der Nächste bitte!\n"
           ]
         }
@@ -2812,6 +2811,43 @@
     {
       "cell_type": "code",
       "source": [
+        "zahl = int(input(\"Bitte geben Sie eine Zahl ein: \"))\n",
+        "if zahl < 1000:\n",
+        "  print(\"Diese zahl ist kleiner als 1000 \")\n",
+        "\n",
+        "if zahl < 100:\n",
+        "  print(\"Diese Zahl ist kleiner als 100\")\n",
+        "\n",
+        "if zahl < 10:\n",
+        "  print(\"Diese Zahl ist kleiner als 10\")\n",
+        "\n",
+        "  print(\"Dankeschön!\")\n",
+        "else:\n",
+        "  zahl > 1000\n",
+        "  print(\"Dankeschön!\")"
+      ],
+      "metadata": {
+        "id": "S8RBK6g6ZYCe",
+        "outputId": "f2029b04-2c64-49e3-c4db-08399280577e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bitte geben Sie eine Zahl ein: 1123\n",
+            "Dankeschön!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Dein Code hier\n",
         "zahl = int(input(\"Bitte geben Sie eine Zahl ein: \"))\n",
         "\n",
@@ -2821,12 +2857,12 @@
       ],
       "metadata": {
         "id": "nOXh4vbU4Twy",
-        "outputId": "8215628f-f4f7-4643-cf3a-0d7ca111bc1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ac68710f-c2e9-4937-ec12-b502a0fafec3"
       },
-      "execution_count": 22,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -2845,26 +2881,57 @@
         "zahl = int(input(\"Bitte geben Sie eine Zahl ein: \"))\n",
         "\n",
         "if zahl < 1000 + 100:\n",
-        "  print(\"Diese Zahl ist kleiner als 1000\\nDiese Zahl ist kleiner als 100\")\n",
+        "  print(\"Diese Zahl ist kleiner als 1000\\nDiese Zahl ist kleiner als 100\\nDiese Zahl ist kleiner als 10\")\n",
         "  print(\"Dankeschön!\")\n",
         "\n",
         "\n",
         "\n"
       ],
       "metadata": {
-        "id": "nd-GWUoQjCkO",
-        "outputId": "1371e0f9-0a70-46d6-c431-c5580efa7ef8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nd-GWUoQjCkO",
+        "outputId": "96874dbb-c8f6-40f0-dcbb-2781b7782742"
       },
-      "execution_count": 43,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Bitte geben Sie eine Zahl ein: 59\n",
+            "Bitte geben Sie eine Zahl ein: 2\n",
+            "Diese Zahl ist kleiner als 1000\n",
+            "Diese Zahl ist kleiner als 100\n",
+            "Diese Zahl ist kleiner als 10\n",
+            "Dankeschön!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zahl = int(input(\"Bitte geben Sie eine Zahl ein: \"))\n",
+        "\n",
+        "if zahl < 1000 + 100 + 10:\n",
+        "  print(\"Diese Zahl ist kleiner als 1000\\nDiese Zahl ist kleiner als 100\")\n",
+        "  print(\"Dankeschön!\")"
+      ],
+      "metadata": {
+        "id": "kJYzhEYpYXSq",
+        "outputId": "b82b32c6-2c82-49ab-976e-288a4958765c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bitte geben Sie eine Zahl ein: 2\n",
             "Diese Zahl ist kleiner als 1000\n",
             "Diese Zahl ist kleiner als 100\n",
             "Dankeschön!\n"
@@ -2901,10 +2968,10 @@
       ],
       "metadata": {
         "id": "P7EaYy6A4eMv",
-        "outputId": "c340e19e-bc6d-4e52-ed48-82b1f6f70bf3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c340e19e-bc6d-4e52-ed48-82b1f6f70bf3"
       },
       "execution_count": 17,
       "outputs": [
@@ -2935,10 +3002,22 @@
         "    print(\"Diese Zeile wird jedes mal ausgegeben.\")"
       ],
       "metadata": {
-        "id": "OqZqsu6h4xJw"
+        "id": "OqZqsu6h4xJw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eb868ae2-a43d-4359-8c32-a3a31f321506"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Diese Zeile wird jedes mal ausgegeben.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
