--- a/recap.ipynb
+++ b/recap.ipynb
@@ -2827,11 +2827,11 @@
         "  print(\"Dankeschön!\")"
       ],
       "metadata": {
-        "id": "S8RBK6g6ZYCe",
-        "outputId": "f2029b04-2c64-49e3-c4db-08399280577e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "S8RBK6g6ZYCe",
+        "outputId": "f2029b04-2c64-49e3-c4db-08399280577e"
       },
       "execution_count": 13,
       "outputs": [
@@ -2919,11 +2919,11 @@
         "  print(\"Dankeschön!\")"
       ],
       "metadata": {
-        "id": "kJYzhEYpYXSq",
-        "outputId": "b82b32c6-2c82-49ab-976e-288a4958765c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kJYzhEYpYXSq",
+        "outputId": "b82b32c6-2c82-49ab-976e-288a4958765c"
       },
       "execution_count": 4,
       "outputs": [
@@ -3053,13 +3053,45 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dein Code hier"
+        "# Dein Code hier\n",
+        "zahl1 = int(input(\"Zahl 1: \"))\n",
+        "zahl2 = int(input(\"Zahl 2: \"))\n",
+        "\n",
+        "operation = input(\"Operation: \")\n",
+        "\n",
+        "if operation == \"Addieren\":\n",
+        "  ergebnis = zahl1 + zahl2\n",
+        "  print(f\"{zahl1} + {zahl2} = {ergebnis}\")\n",
+        "\n",
+        "\n",
+        "elif operation == \"Multiplizieren\":\n",
+        "  ergebnis = zahl1 * zahl2\n",
+        "  print(f\"{zahl1} * {zahl2} = {ergebnis}\")\n",
+        "\n",
+        "elif operation == \"Subtrahieren\":\n",
+        "  ergebnis = zahl1 - zahl2\n",
+        "  print(f\"{zahl1} - {zahl2} = {ergebnis}\")"
       ],
       "metadata": {
-        "id": "DLIBvEqj5SCr"
+        "id": "DLIBvEqj5SCr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9ece1cf3-978a-488c-ce89-0db40aacdb3e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Zahl 1: 4\n",
+            "Zahl 2: 6\n",
+            "Operation: Multiplizieren\n",
+            "4 * 6 = 24\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
