--- a/recap.ipynb
+++ b/recap.ipynb
@@ -3120,13 +3120,38 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dein Code hier"
+        "# Dein Code hier\n",
+        "fahrenheit = float(input(\"Bitte geben Sie eine Temperatur (F) ein: \"))\n",
+        "\n",
+        "\n",
+        "celsius = (fahrenheit - 32) * 5 / 9\n",
+        "\n",
+        "\n",
+        "print(f\"{fahrenheit} Grad Fahrenheit entspricht {str(celsius).replace('.', ',')} Grad Celsius\")\n",
+        "\n",
+        "\n",
+        "if celsius < 0:\n",
+        "    print(\"Brr! Es ist kalt hier drinnen!\")"
       ],
       "metadata": {
-        "id": "M2wRZPzY5pme"
+        "id": "M2wRZPzY5pme",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "737db2af-6201-4114-d8db-93e58d0895d0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bitte geben Sie eine Temperatur (F) ein: -10\n",
+            "-10.0 Grad Fahrenheit entspricht -23,333333333333332 Grad Celsius\n",
+            "Brr! Es ist kalt hier drinnen!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
