--- a/recap.ipynb
+++ b/recap.ipynb
@@ -3181,13 +3181,41 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dein Code hier"
+        "# Dein Code hier\n",
+        "\n",
+        "stundenlohn = float(input(\"Stundenlohn: \").replace(\",\", \".\"))\n",
+        "arbeitsstunden = float(input(\"Geleistete Arbeitsstunden: \").replace(\",\", \".\"))\n",
+        "wochentag = input(\"Tag der Woche: \").strip().capitalize()\n",
+        "\n",
+        "\n",
+        "if wochentag == \"Sonntag\":\n",
+        "    tageslohn = (stundenlohn * 2) * arbeitsstunden\n",
+        "else:\n",
+        "    tageslohn = stundenlohn * arbeitsstunden\n",
+        "\n",
+        "\n",
+        "print(f\"Tageslohn: {str(round(tageslohn, 1)).replace('.', ',')} Euro\")\n"
       ],
       "metadata": {
-        "id": "hFK4XMKU53qN"
+        "id": "hFK4XMKU53qN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f22115ba-fb57-4dfc-88ac-7d69a84c4acf"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Stundenlohn: 12,5\n",
+            "Geleistete Arbeitsstunden: 10\n",
+            "Tag der Woche: Sonntag\n",
+            "Tageslohn: 250,0 Euro\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3235,10 +3263,25 @@
         "print(\"Sie haben jetzt \", points, \"Punkte\")"
       ],
       "metadata": {
-        "id": "cuFZ6z_i6ofK"
+        "id": "cuFZ6z_i6ofK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a73f480e-2cf7-43c9-c985-9440d55bf5d0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Wie viele Punkte befinden sich auf Ihrer Karte? 95\n",
+            "Ihr Bonus beträgt 10 %\n",
+            "Ihr Bonus beträgt 15 %\n",
+            "Sie haben jetzt  120.17500000000001 Punkte\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3291,13 +3334,52 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dein Code hier"
+        "# Dein Code hier\n",
+        "\n",
+        "temperatur = int(input(\"Wie lautet die Wettervorhersage für morgen?\\nTemperatur: \"))\n",
+        "regen = input(\"Wird es regnen (ja/nein): \").strip().lower()\n",
+        "\n",
+        "\n",
+        "print(\"Tragen Sie Jeans und ein T-Shirt\")\n",
+        "\n",
+        "if temperatur <= 20:\n",
+        "    print(\"Ich empfehle auch einen Pullover\")\n",
+        "if temperatur <= 10:\n",
+        "    print(\"Nehmen Sie eine Jacke mit\")\n",
+        "if temperatur <= 5:\n",
+        "    print(\"Es sollte eine warme Jacke sein.\")\n",
+        "    print(\"Ich denke, Handschuhe sind in Ordnung\")\n",
+        "\n",
+        "\n",
+        "if regen == \"ja\":\n",
+        "    print(\"Vergessen Sie Ihren Regenschirm nicht\")\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "GoK8kqPe7VLi"
+        "id": "GoK8kqPe7VLi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "83513aad-4215-40aa-d23f-8e1258da308d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Wie lautet die Wettervorhersage für morgen?\n",
+            "Temperatur: 10\n",
+            "Wird es regnen (ja/nein): ja\n",
+            "Tragen Sie Jeans und ein T-Shirt\n",
+            "Ich empfehle auch einen Pullover\n",
+            "Nehmen Sie eine Jacke mit\n",
+            "Vergessen Sie Ihren Regenschirm nicht\n"
+          ]
+        }
+      ]
     }
   ]
 }
