--- a/D&D_MVP.ipynb
+++ b/D&D_MVP.ipynb
@@ -128,26 +128,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FQXrKmLCYcd1",
-        "outputId": "e3c2b10e-cafb-4f55-a43b-d690a928004f"
+        "outputId": "f76a12db-5a33-4857-d4db-e7709794b858"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "🎭 Erstelle deinen Charakter\n",
-            "Wie heißt dein Held? Najat\n",
-            "Was ist deine Klasse? Zauber\n",
-            "Was ist deine Spezies? Zauber Familie\n",
+            "Wie heißt dein Held? Olga\n",
+            "Was ist deine Klasse? Magier\n",
+            "Was ist deine Spezies? Elf\n",
             "\n",
             "Dein Charakter:\n",
-            "Name: Najat\n",
-            "Klasse: Zauber\n",
-            "Spezies: Zauber Familie\n",
-            "Angriff: 15\n",
+            "Name: Olga\n",
+            "Klasse: Magier\n",
+            "Spezies: Elf\n",
+            "Angriff: 8\n",
             "HP: 20\n",
-            "Inventar: ['🧪 Abgelaufener Lebenstrank', '⚔️ Rostiges Eisenschwert']\n"
+            "Inventar: ['🔪 Stumpfes Messer', '🍵 Schimmeliger Zaubertrank']\n"
           ]
         }
       ]
@@ -197,17 +197,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e_aWWYZmYskN",
-        "outputId": "5acdc257-bf46-4ee8-9547-ac36bcd44b39"
+        "outputId": "571092d2-9b8b-484a-af4d-e41212c9c998"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Name: 🐍💨 windige Schlange\n",
-            "Angriff: 14\n",
-            "HP: 9\n"
+            "Name: 🧌🔍 winziger Goblin\n",
+            "Angriff: 10\n",
+            "HP: 7\n"
           ]
         }
       ]
@@ -237,15 +237,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WSvgWbmaY0FZ",
-        "outputId": "02e474e5-75ad-420f-dea5-a362add2fbf7"
+        "outputId": "4fb81ef8-cf1d-47ce-e5d7-074e4fee51e5"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3\n"
+            "6\n"
           ]
         }
       ]
@@ -301,7 +301,7 @@
       "metadata": {
         "id": "as-4WLP1ZRvN"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -372,12 +372,12 @@
       ],
       "metadata": {
         "id": "EsPD1ZNbafLm",
-        "outputId": "27b475fa-7b2e-4d56-be22-176b03394e12",
+        "outputId": "67852e8f-0eae-4600-b12d-4ed86016b831",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,23 +385,23 @@
           "text": [
             "\n",
             "🎒 Dein Inventar:\n",
-            "🔹 🔪 Stumpfes Messer\n",
-            "🔹 🪵 Durchlöchertes Holzschild\n",
+            "🔹 🛡️ Klapprige Holzrüstung\n",
+            "🔹 🛡️ Klapprige Holzrüstung\n",
             "-------------------\n",
             "🎒 🔮 Magischer Kristall wurde deinem Inventar hinzugefügt!\n",
             "🎒 🏹 Alter Bogen wurde deinem Inventar hinzugefügt!\n",
             "\n",
             "🎒 Dein Inventar:\n",
-            "🔹 🔪 Stumpfes Messer\n",
-            "🔹 🪵 Durchlöchertes Holzschild\n",
+            "🔹 🛡️ Klapprige Holzrüstung\n",
+            "🔹 🛡️ Klapprige Holzrüstung\n",
             "🔹 🔮 Magischer Kristall\n",
             "🔹 🏹 Alter Bogen\n",
             "-------------------\n",
             "❌ 🧪 Abgelaufener Lebenstrank ist nicht im Inventar!\n",
             "\n",
             "🎒 Dein Inventar:\n",
-            "🔹 🔪 Stumpfes Messer\n",
-            "🔹 🪵 Durchlöchertes Holzschild\n",
+            "🔹 🛡️ Klapprige Holzrüstung\n",
+            "🔹 🛡️ Klapprige Holzrüstung\n",
             "🔹 🔮 Magischer Kristall\n",
             "🔹 🏹 Alter Bogen\n",
             "-------------------\n"
@@ -467,21 +467,21 @@
       ],
       "metadata": {
         "id": "wtdj0Gcbaesq",
-        "outputId": "343dcc23-448d-43fa-a597-fffb1b18dd92",
+        "outputId": "bfe9a1fe-a232-47c2-be01-8768a261c907",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "🔍 Erkundung gestartet... (Truhe gefunden)\n",
-            "✨ Du hast eine versteckte Truhe gefunden! Du erhältst 8 Goldmünzen. ✨\n",
-            "📜 Ereignis-Ergebnis: {'gold': 8}\n"
+            "🔍 Erkundung gestartet... (Feind gesichtet)\n",
+            "⚔️ Plötzlich taucht ein 🐺 Wolf auf! Bereite dich auf den Kampf vor!\n",
+            "📜 Ereignis-Ergebnis: {'enemy': '🐺 Wolf'}\n"
           ]
         }
       ]
@@ -535,19 +535,19 @@
         "\n",
         "    rat_wahl = input(\"Wähle 1, 2 oder 3:\")\n",
         "\n",
-        "if rat_wahl == \"1\":\n",
+        "    if rat_wahl == \"1\":\n",
         "        print(\"Der alte Mann sagt: 'Sei vorsichtig, die Dunkelheit birgt viele Gefahren.'\")\n",
         "        print(\"Du fühlst dich ermutigt und bereit für das Abenteuer!\")\n",
-        "elif rat_wahl == \"2\":\n",
+        "    elif rat_wahl == \"2\":\n",
         "        print(\"Du ignorierst den alten Mann und gehst weiter.\")\n",
         "        print(\"Vielleicht war das nicht die beste Entscheidung...\")\n",
         "\n",
-        "elif rat_wahl == \"3\":\n",
+        "    elif rat_wahl == \"3\":\n",
         "        print(\"Der alte Mann sagt: Nimm mich als Komplizen und ich werde dir weiter helfen.\")\n",
         "        print(\"Du nimmst seinen Vorschlag an und kommst so sicher ans Ziel.\")\n",
         "\n",
         "\n",
-        "else:\n",
+        "    else:\n",
         "        print(\"Der alte Mann schaut dich verwirrt an und geht weg.\")\n",
         "\n",
         "\n",
@@ -598,9 +598,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e8Afro-wPp3C",
-        "outputId": "c5388e44-4801-43b0-a96b-066ee6223821"
+        "outputId": "86647dfc-f770-492a-b369-67304803830b"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,26 +609,20 @@
             "GAME BEGINS\n",
             "Wähle zunächst einen Charakter: \n",
             "🎭 Erstelle deinen Charakter\n",
-            "Wie heißt dein Held? Najat\n",
-            "Was ist deine Klasse? Zauber \n",
-            "Was ist deine Spezies? Zauber Familie\n",
+            "Wie heißt dein Held? Olga\n",
+            "Was ist deine Klasse? Magier\n",
+            "Was ist deine Spezies? Elf\n",
             "Nun beginnt deine Reise...\n",
             "\n",
             "Du stehst vor einer dunklen Höhle. Was tust du?\n",
             "1️⃣ Gehe hinein.\n",
             "2️⃣ Laufe weiter.\n",
             "3️⃣Rufe nach Hilfe.\n",
-            "Wähle 1,2 oder 3: 3\n",
-            "Du rufst nach Hilfe.\n",
-            "Nach einer kurzen Weile erscheint ein weiser alter Mann.\n",
-            "Er bietet dir an, dir einen wertvollen Rat zu geben.\n",
-            "Was möchtest du tun?\n",
-            "1️⃣ Höre auf seinen Rat.\n",
-            "2️⃣ Ignoriere ihn und gehe weiter.\n",
-            "3️⃣ Nimm ihn als Komplizen.\n",
-            "Wähle 1, 2 oder 3:3\n",
-            "Der alte Mann sagt: Nimm mich als Komplizen und ich werde dir weiter helfen.\n",
-            "Du nimmst seinen Vorschlag an und kommst so sicher ans Ziel.\n",
+            "Wähle 1,2 oder 3: 2\n",
+            "Du gehst weiter und findest eine sichere Stelle zum Ausruhen. 🏕️\n",
+            "Oha, hier liegt ein 🔪 Stumpfes Messer rum. Heb es doch auf!\n",
+            "Drücke ENTER, um das aufzuheben\n",
+            "Cool, dein Inventar besteht nun aus: ['🔪 Stumpfes Messer', '🍵 Schimmeliger Zaubertrank', '🔪 Stumpfes Messer']\n",
             "Nachdem du den alten Mann als Komplizen angenommen hast, spürst du sofort eine Welle des Vertrauens.\n",
             "Er lächelt weise und führt dich durch einen geheimen Pfad, der von dichten Bäumen gesäumt ist.\n",
             "„Dieser Weg ist sicher, aber wir müssen leise sein“, flüstert er.\n",
